<resources>
    <string name="app_name" translatable="false">Projet_Mobile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="main_activity">MainActivity</string>

    <!-- Login/Sign up  -->
    <string name="login_uppercase">LOGIN</string>
    <string name="login_lowercase">Login</string>
    <string name="signup_uppercase">SIGN UP</string>
    <string name="signup_lowercase">Sign up</string>
    <string name="username_hint">Enter your username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>

    <!-- Drawer menu -->
    <string name="drawer_navbar">Navbar</string>
    <string name="main_page">Main Page</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="cart">Cart</string>

    <!-- Product Detail -->
    <string name="product_name_default">Product name</string>
    <string name="product_price_default" translatable="false">0 $</string>
    <string name="product_description_default">Product description</string>
    <string name="product_image_description_default">Product image</string>
    <string name="decrement_button_sign" translatable="false">-</string>
    <string name="increment_button_sign" translatable="false">+</string>
    <string name="add_to_cart_uppercase">ADD TO CART</string>
    <string name="quantity_default" translatable="false">1</string>

    <!-- Cart -->
    <string name="cart_title">Products in your cart: </string>
    <string name="subtotal_detail">Subtotal: </string>
    <string name="tps_detail" translatable="false">TPS: </string>
    <string name="province_tax">Province tax: </string>
    <string name="total_detail" translatable="false">Total: </string>
    <string name="price_default" translatable="false">00000.00 $</string>
    <string name="proceed">Proceed to payment</string>

    <!-- Form -->
    <string name="form_title" translatable="false">Confirmation</string>
    <string name="province_hint" translatable="false">Ontario</string>
    <string name="city_hint">Email</string>
    <string name="address_hint" translatable="false">697 Trudie Streets</string>
    <string name="postal_code_hint" translatable="false">J3J J3J</string>
    <string name="confirm_button">Confirm</string>

    <!-- Profile -->
    <string name="profile_title">Your profile:</string>
    <string name="profile_name">Firstname Lastname</string>
    <string name="profile_email">firtnamelastname@gmail.com</string>
    <string name="province_selector" translatable="false">Province: </string>

    <!-- Confirmation -->
    <string name="confirmation_text">Transaction completed!</string>
    <string name="main_menu_button">Main Menu</string>

    <string-array name="provinces_array">
        <item>Quebec</item>
        <item>Ontario</item>
        <item>British Columbia</item>
        <item>Alberta</item>
        <item>Saskatchewan</item>
        <item>Manitoba</item>
        <item>Yukon</item>
        <item>Newfoundland and Labrador</item>
        <item>New Brunswick</item>
        <item>Nova Scotia</item>
        <item>Prince Edward Island</item>
    </string-array>
</resources>