<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".views.fragments.ProductDetailFragment">

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="237dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_name_default"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/ivProductImage"
        app:layout_constraintTop_toBottomOf="@+id/ivProductImage" />

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:text="@string/product_price_default"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/tvProductName"
        app:layout_constraintEnd_toEndOf="@+id/ivProductImage"
        app:layout_constraintTop_toTopOf="@+id/tvProductName" />

    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="306dp"
        android:layout_height="257dp"
        android:src="@drawable/p_85_south_hoodie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        android:contentDescription="@string/product_image_description_default" />

    <TextView
        android:id="@+id/tvProductDescription"
        android:layout_width="305dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_description_default"
        app:layout_constraintEnd_toEndOf="@+id/ivProductImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ivProductImage"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bDecrement"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/decrement_button_sign"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvProductDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvProductDescription" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/quantity_default"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/bDecrement"
        app:layout_constraintStart_toEndOf="@+id/bDecrement"
        app:layout_constraintTop_toTopOf="@+id/bDecrement" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bIncrement"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_button"
        android:text="@string/increment_button_sign"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bDecrement"
        app:layout_constraintStart_toEndOf="@+id/tvQuantity"
        app:layout_constraintTop_toTopOf="@+id/bDecrement"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bAddToCard"
        android:layout_width="129dp"
        android:layout_height="49dp"
        android:background="@drawable/bg_button"
        android:text="@string/add_to_cart_uppercase"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bIncrement"
        app:layout_constraintEnd_toEndOf="@+id/tvProductDescription"
        app:layout_constraintTop_toTopOf="@+id/bIncrement"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bBack"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_baseline_arrow_back"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>