<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".views.fragments.CartFragment">

    <TextView
        android:id="@+id/tvCartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cart_title"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvCart"
        android:layout_width="360dp"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        android:smoothScrollbar="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCartTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPrices"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/lvCart"
        app:layout_constraintStart_toStartOf="@+id/lvCart"
        app:layout_constraintTop_toBottomOf="@+id/lvCart">

        <TextView
            android:id="@+id/tvSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tps_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTotal" />

        <TextView
            android:id="@+id/tvPVQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tvq_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTPS" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/total_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPVQ" />

        <TextView
            android:id="@+id/tvSubTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvSubTotal" />

        <TextView
            android:id="@+id/tvTPSPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTPS" />

        <TextView
            android:id="@+id/tvTVQPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvPVQ" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTotal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bProceedToPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/proceed"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>