<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="86dp"
                android:layout_height="92dp"
                android:contentDescription="@string/product_image_description_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="249dp"
                android:layout_height="31dp"
                android:text="@string/product_name_default"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.177"
                app:layout_constraintStart_toEndOf="@+id/ivProductImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvProductName" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bDecrement"
                android:layout_width="51dp"
                android:layout_height="49dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_button"
                android:text="@string/decrement_button_sign"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tvProductName"
                app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etQuantity"
                android:layout_width="51dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/quantity_default"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/bDecrement"
                app:layout_constraintStart_toEndOf="@+id/bDecrement"
                app:layout_constraintTop_toTopOf="@+id/bDecrement"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bIncrement"
                android:layout_width="51dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_button"
                android:text="@string/increment_button_sign"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/bDecrement"
                app:layout_constraintStart_toEndOf="@+id/etQuantity"
                app:layout_constraintTop_toTopOf="@+id/bDecrement"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvProductPriceQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/product_price_default"
                app:layout_constraintBottom_toBottomOf="@+id/bIncrement"
                app:layout_constraintStart_toEndOf="@+id/bIncrement"
                app:layout_constraintTop_toTopOf="@+id/bIncrement" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>