<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.FormFragment">

    <TextView
        android:id="@+id/tvFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/form_title"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sProvince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="128dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/custom_edit_text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFormTitle"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_city_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/city_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sProvince" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_address_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCity" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/postal_code_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bg_button"
        android:text="@string/confirm_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPostalCode" />

</androidx.constraintlayout.widget.ConstraintLayout>