<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.ProfileFragment">

    <TextView
        android:id="@+id/tvProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/profile_title"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clImageContainer"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileTitle">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivProfilePic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bCamera"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_camera"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/clImageContainer"
            app:layout_constraintTop_toTopOf="@+id/clImageContainer"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/clImageContainer"
        app:layout_constraintStart_toStartOf="@+id/clImageContainer"
        app:layout_constraintTop_toBottomOf="@+id/clImageContainer" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_email"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvUserName"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/province_selector"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvUserEmail" />

    <Spinner
        android:id="@+id/sProvince"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/tvUserEmail"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>